update 使用 jdk17 语法优化代